--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </script>
 
     <!--Javascript References-->
-    <script src="js/splash.js"></script>
+    <script type="text/javascript" src="js/splash.js"></script>
 
 </body>
 </html>
