--- a/signin.html
+++ b/signin.html
@@ -41,16 +41,19 @@
                 <p class="text-center" id="signin">Sign In</p>
     
                 <form action="#">
-                    <div class="form-group">
-                      <input type="email" class="form-control text-left" id="email" placeholder="Email Address">
+                    <div class="form-group inputWithIcon">
+                      <input type="email" class="form-control text-left" id="email" placeholder="Email Address" required>
+                      <i class="fa fa-envelope" aria-hidden="true"></i>
                     </div> <br>
-                    <div class="form-group">
-                      <input type="password" class="form-control text left" id="pwd" placeholder="Password">
+                    <div class="form-group inputWithIcon">
+                      <input type="password" class="form-control text left" id="pwd" placeholder="Password" required>
+                      <i class="fa fa-lock" aria-hidden="true"></i>
+                      <span toggle="#password-field" class="fa fa-eye field-icon toggle-password"></span>
                     </div> <br>
                     <div class="text-center">
                       <p id="forgotpwd">Forgot Password? <span><a href="#">Reset</a></span></p>
                     </div>
-                    <button type="submit" class="btn btn-submit form-control">Submit</button>
+                    <a type="button" class="btn btn-default form-control" id="signin-btn">Submit</a>
                 </form>
             </div>
           </div>
@@ -72,15 +75,13 @@
 
 
 
-
-
     <!--Bootstrap Script-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
 
     <!--Javascript References-->
-    
+    <script type="text/javascript" src="js/viewPass.js"></script>
 
 </body>
 </html>
